--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "npm i && tsd install",
-    "webpack": "node ./tools/webpack"
+    "compile": "tsc"
   },
   "author": "",
   "license": "ISC",
@@ -18,8 +18,6 @@
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
-    "ts-loader": "^0.9.5",
-    "webpack": "^1.13.2",
-    "webpack-merge": "^0.15.0"
+    "typescript": "^2.0.3"
   }
 }
