--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,10 @@
     "compilerOptions": {
         "module": "commonjs",
         "target": "es5",
-        "outDir": "dist",
-        "watch": true 
-        },
-    "compileOnSave": true
+        "outDir": "dist"
+    },
+    "compileOnSave": true,
+    "exclude": [
+        "node_modules"
+    ]
 }
