--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "module": "commonjs",
         "target": "es5",
-        "outDir": "dist"
+        "outDir": "dist",
+        "watch": true
     },
     "compileOnSave": true,
     "exclude": [
