--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npm i && tsd install",
     "compile": "tsc"
   },
-  "author": "",
+  "author": "fiWhy",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
